--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,7 +1,9 @@
 <div *ngIf="hero">
 
     <h2>{{hero.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{hero.id}}</div>
+    <div>
+      <label for="hero-id">id:</label>
+      <input id="hero-id" [(ngModel)]="hero.id"></div>
     <div>
       <label for="hero-name">Hero name: </label>
       <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
@@ -9,3 +11,5 @@
   
   </div>
   <button type="button" (click)="goBack()">go back</button>
+  <button type="button" (click)="save()">save</button>
+  <button type="button" (click)="test()">Test</button>
