preparing for migration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
+<body>
 <h1>{{title}}</h1>
 <nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
-  <a routerLink="/test">Test</a>
+  <ul>
+    <a routerLink="/tutorials">Tutorials</a>
+    <a routerLink="/heroes">Items</a>
+    <a routerLink="/categories">Categories</a>
+    <a routerLink="/toDoList">Tasks</a>
+  </ul>
 </nav>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+
+</body>
