--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -88,3 +88,13 @@ button.delete:hover {
   background-color: #525252;
   color: white;
 }
+.dropdown {
+
+
+  display: inline-block;
+
+
+  position: relative;
+
+
+}
